--- a/Example/Resources/Info.plist
+++ b/Example/Resources/Info.plist
@@ -21,7 +21,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<string>TabBarController</string>
 	<key>UIMainStoryboardFile</key>
 	<string>TabBarController</string>
 	<key>UIRequiredDeviceCapabilities</key>
